infrastructure/storage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.org/client-max-body-size: "1000m"
    nginx.org/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - longhorn.cluster.f4mily.net
    secretName: wildcard-cluster-f4mily-net-tls
  rules:
  - host: longhorn.cluster.f4mily.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
